<resources>
    <string name="app_name">"Concept of Physics "</string>
    <string name="physics">Physics</string>
    <string name="myname">Er.Prakash sharma</string>
    <string name="_1_introduction_to_physics">1 - Introduction to physics</string>
    <string name="thermodynamics">12 - Thermodynamics</string>
    <string name="ktg">13 - Kinetic Theroy of Gases</string>
    <string name="waves">15 - Waves</string>
    <string name="oscillations">14 - Oscillations</string>
    <string name="_1_physical_world">1 - Physical World</string>
    <string name="_2_unit_and_measurements">2 - Unit and Measurements</string>
    <string name="_3_motion_in_straight_line">3 - Motion in straight line</string>
    <string name="_4_motion_in_plane">4 - Motion in Plane</string>
    <string name="_5_laws_of_motion">5 - Laws of motion</string>
    <string name="work_power_and_energy">6 - Work , Power and Energy</string>
    <string name="_7_rotational_dynamics">7 - Rotational Dynamics</string>
    <string name="_8_gravitation">8 - Gravitation</string>
    <string name="_9_mechanical_properties_of_solids">9 - Mechanical Properties of Solids</string>
    <string name="_10_mechanical_properties_of_fluid">10 - Mechanical Properties of Fluid</string>
    <string name="_11_thermal_properties_of_matter">11 - Thermal Properties of Matter</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="what_is_physics">What is physics ?</string>
    <string name="whatisphysics"><![CDATA[Physics is the study of Nautre and its laws . All the different events in the nature takes place according to some laws , Physics is all about the revealing these laws of nature.\n\n Example : The orbitting of the moon around the earth , falling of an apple from the tree annd tides in seas etc. can all be explained if we know the Newton\'s laws of gravitation. \n\n Chess events can be compared with the events of the Nature , and We can reveal the laws of nature by observing , similar to the revealing the laws of chess by simply observing the events.]]></string>
    <string name="relation_between_physics_and_mathematics">Relation between Physics and Mathematics</string>
    <string name="relation">Mathematics is the language of physics . Without the knowledge of mathematics it would be much more
    difficult to discover and understand  and explain the laws of nature.\n\n
    Example:\n
    The law of gravitaion says that \"gravitational force between two bodies is directly proportional to the
    product of its masses and inversaly proportional to the square of the distance between them\" .
    \nThis can be simply represented by Mathematics as follow :
        \n\t\t\t\t\t\t\t\t\t\t\tF = Gm1m2/r<sup>2</sup>
</string>
    <string name="principle_thrusts">
<strong>There are two principal thrusts in Physics </strong> \n
 1.Unification\n 2. Reduction\nUnification\n• Efforts are made to explain different phenomena in nature on the basis of one or
minimum laws. This is principle of Unification.Example: Phenomena of apple falling to ground,moon revolving around earth and weightlessness in
the rocket, all these phenomena are explained with help of one Law that is, Newtons Law of Gravitation.
\n\n
        Reductionism\n• To understand or to derive the properties of abigger or more complex system the properties
of its simpler constituents are taken into account. This approach is called reductionism. \nIt is supposed to be the heart of Physics.
For example a complex thermo dynamical system can be understood by the properties of its constituent like
kinetic energy of molecules and atoms.
    </string>
    <string name="priciple_thrusts_in_physics">Principle Thrusts in Physics</string>
    <string name="scope_of_physics">Scope of Physics</string>
    <string name="scope_of_physics_theory"> The scope of Physics can be divided in to two domains \n\n Macroscopic and Microscopic.\n\n • Macroscopic domain includes phenomena at the level of Laboratory, terrestrial and astronomical scales.\n • Microscopic domain I ncludes atomic, molecular and nuclear phenomena. \n• Recently third domain in between is also thought of with name Mesoscopic Physics. This deals with group of Hundreds of atoms \n • Scope of physics is very wide and exciting because it deals with objects of size as large as Universe (10<sup>25m</sup>) and as small as 10<sup>-14</sup> m, the size of a nucleus. \n\nThe excitement of Physics is experienced in many fields Like:\n • Live transmissions through television. \n• Computers with high speed and memory, \n• Use of Robots,\n • Lasers and their applications</string>
    <string name="fundamental_forces">Fundamental Forces in Nature There is a large number of forces experienced or
applied. These may be macroscopic forces like gravitation, friction, contact forces and microscopic
forces like electromagnetic and inter-atomic forces. But all these forces arise from some basic forces called
Fundamental Forces.\n\n  Fundamental Forces in Nature..\n\n
1. Gravitational force.\n
• It is due to Mass of the two bodies.\n
• It is always attractive.\n
• It operates in all objects of universe.\n
• Its range is infinite\n
It’s a weak force. 10<sup>-38 </sup>times compared to strong
Nuclear force\n\n
2.Electromagnetic Forces:\n\n
• It’s due to stationery or moving Electrical charge
• It may be attractive or repulsive.\n
• It operates on charged particles\n
• Its range is infinite\n
• Its stronger 1036 times than gravitational force but 10<sup>-2</sup>\n times of strong Nuclear force.\n\n
3.Strong nuclear force:\n
• Operate between Nucleons\n
• It may be attractive or repulsive\n
• Its range is very short, within nuclear size
(10<sup>-15 m</sup>).\n
• Its strongest force in nature\n\n
4.Weak Nuclear force:\n\n
• Operate within nucleons I.e. elementary
particles like electron and neutrino.\n
• It appears during radioactive b decay.\n
• Has very short range 10<sup>-15m</sup>.\n
• 10-13 times than Strong nuclear force.\n\n\n
</string>
    <string name="conservative_laws">
        Conservation Laws\n\n
• In any physical phenomenon governed by different forces, several quantities do not change with time. These special quantities are
conserved quantities of nature. \n
1.For motion under conservative force, the total mechanical Energy of a body is constant. \n
2.Total energy of a system is conserved, and it is valid across all domains of nature from microscopic to
macroscopic. Total energy of the universe is believed to be constant.\n
3.Conservation of Mass was considered another conservation law, till advent of Einstein. Then it was
converted to law of conservation of mass plus energy.
Because mass is converted into energy and vice-versa according to equation E = mc<sup>2</sup>
The examples are annihilation and pair production.\n
4.Momentum is another quantity which is preserved. Similar is angular momentum of an isolated system.
5.Conservation of Electric charge is a fundamental law of nature.\n
6. Later there was development of law of conservation of attributes called baryon number, lepton number and so on.\n\n
The laws of nature do not change with change of space and time. This is known as symmetry of space
and time. This and some other symmetries play a central role in modern physics. Conservation laws are
connected to this.</string>
    <string name="fundamental_forces_of_nature">Fundamental forces of nature</string>
    <string name="conservation_laws">Conservation Laws</string>
    <string name="some_important_discoveries">Some Important Discoveries</string>
    <string name="imp_dis">Some Important Discoveries</string>
    <string name="technology_uses_physics">Technology uses physics</string>
    <string name="unit_and_measurement">Unit and measurement</string>
    <string name="introduction">
        Physics describe the laws of nature and this description is quantitative in nature and require some measurement and comparison of quantities. To measure some physical quantity we need some units of that quantity .\n\n
        CGPM also know as General Conference on Weight and Measure , decides all the standard Units .\n


    </string>
    <string name="fundamentalq">

        Fundamental and derived quantities :
        \n\nFundamental Quantites :
        We can define the fundamental quantites as follow \n
        a) The fundamental quantity should be independent of each other and
        \nb) All the other quantities may be expressed in terms of fundamental quantites .\n\n

        It turns out that there are Only seven fundamental quantities .All the other quantites can be derived from these fundamental quantities by multiplication and division.These are called derived quantities . \n
        The units for fundamental quanitites is called funadmental untis and units for derived quantities is called derived units .\n

        The seven fundamental quantities are :\n
    </string>
    <string name="definations">Properties and defination of fundamental or Base units :\n
        Properties : Any standard unit should follow this two properties \n
        a) Invariability : The stanard unit nust be invariable , means does not depends on condiitons .\n
        b) Availability : The standard unit should be available for comparing other quantities .\n
        \n
        Definations : \n\n
        Metre : It is the unit of length . The distance travelled by light in vacuum in 1/299,792,458 second is called 1m .
        \n\n
        Kilogram : The mass of a cylinder made of platinum - irridium alloy kept at International Bureau of Weights and Measure is defineds as 1Kg.\n
       \n Second : The second (abbreviation, s or sec) is the Standard International ( SI ) unit of time. One second is the time that elapses during 9,192,631,770 cycles of the radiation produced by the transition between two levels of the cesium 133 atom.\n
        \nAmpere : The ampere is that constant current which, if maintained in two straight parallel conductors of infinite length, of negligible circular cross-section, and placed one metre apart in vacuum, would produce between these conductors a force equal to 2×10<sup>−7</sup> newtons per metre of length.\n
        \nKelvin : The fraction 1/273.16 of the thermodynamic tempreture of tripple point of water is called 1K .\n
        \nMole : The amount of substabce that contains as many elementry entities as there of atoms in 0.012Kg of carbon is called 1 mole. This number is calledd avogadro constant and is equal to 6.022045 * 10<sup>23</sup> .
        \nCandela : 1 candela is the luminous intensity of a blackbody of surface area 1/600000 m<sup>2</sup> placed at a tempreture of freezing platinum and at a pressure of 101325 N/m<sup>2</sup> , in the directiion perpendicular to its surface .\n\n
</string>
    <string name="fundamental">fundamental</string>
    <string name="introductionhead">Introduction</string>
    <string name="fundamental_or_base_quantities_and_thier_units">Fundamental or base quantities and thier units :</string>
    <string name="enter_your_expressions">Enter your expressions ..</string>
    <string name="solve_the_equation">Solve the expression </string>
    <string name="expression_solver_calculator"><![CDATA[>Expression solver calculator]]></string>
    <string name="your_answer">Your Answer</string>
    <string name="two_supplementry_units">Two supplementry units</string>
    <string name="radian_and_stredian">
        Radian : It is the unit of the angle in a plane , one radian is the angle subtended at the centre of circle by an arc of length equal to radius of tht circle .

    </string>
    <string name="electrostatics">16- Electrostatics</string>
    <string name="current">18- Current Electricity</string>
    <string name="_17_electrostatic_potential">17- Electrostatic potential</string>
    <string name="_19_magnetic_effect_of_current">19- Magnetic effect of current</string>
</resources>