<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erprakash.conceptofphysics.PhysicalWrold">
    <ScrollView
        android:id="@+id/scrollViewOfFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#1ABC9C">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
        <TextView
            android:id="@+id/heading"
            android:padding="5dp"
            android:textColor="#0000FF"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/what_is_physics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colortextphysworld"
            android:padding="5dp"
            android:text="@string/whatisphysics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
            <TextView
                android:id="@+id/heading2"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/relation_between_physics_and_mathematics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/colortextphysworld"
                android:padding="5dp"
                android:text="@string/relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/heading3"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/priciple_thrusts_in_physics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colortextphysworld"
                android:padding="5dp"
                android:text="@string/principle_thrusts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/heading4"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scope_of_physics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colortextphysworld"
                android:padding="5dp"
                android:text="@string/scope_of_physics_theory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/heading5"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fundamental_forces_of_nature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colortextphysworld"
                android:padding="5dp"
                android:text="@string/fundamental_forces"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/heading6"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/conservation_laws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colortextphysworld"
                android:padding="5dp"
                android:text="@string/conservative_laws"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/heading8"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imp_dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/heading7"
                android:padding="5dp"
                android:contentDescription="@string/some_important_discoveries"
                android:layout_width="wrap_content"
                android:layout_height="@android:dimen/thumbnail_height"
                android:src="@drawable/major_contribution_and_discoveries"
                 />
            <TextView
                android:id="@+id/heading9"
                android:padding="5dp"
                android:textColor="#0000FF"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/technology_uses_physics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/heading10"
                android:padding="5dp"
                android:contentDescription="@string/some_important_discoveries"
                android:layout_width="wrap_content"
                android:layout_height="@android:dimen/thumbnail_height"
                android:src="@drawable/technology_and_physics"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>