<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.erprakash.conceptofphysics.Calculator">

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:hint="@string/enter_your_expressions"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:singleLine="true"
        android:gravity="right|center_vertical"
        android:textColorHint="@color/colortextphysworld"
        android:textSize="18sp" />

    <Button
        android:id="@+id/equal"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1ABC9C"
        android:fontFamily="casual"
        android:text="@string/solve_the_equation"
        android:textColor="@color/colortextphysworld" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#DAF7A6"
        android:gravity="center"
        android:text="@string/your_answer"
        android:textColor="#1ABC9C"
        android:textSize="30sp" />

</LinearLayout>
